--- a/style.css
+++ b/style.css
@@ -14,15 +14,43 @@ h2 {
     color: aquamarine;
     font-size: 20px;
 }
+header {
+    background-color: greenyellow;
+
+}
 header p {
     font-weight: bold;
     font-style: italic;
     color:blue
    
 }
+nav {        
+    background-color: aliceblue;
+    border: 1px green solid;
+    padding: 8px;
+    margin: -1px 0px 0px 0px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    
+}
+
+nav li {
+    display: inline;
+    padding: 8px;    
+}
+main {
+    background-color:goldenrod;
+}
+
 
 .red-heading{
     color:red;
+}
+
 }
 
 footer{
