--- a/style/Style.css
+++ b/style/Style.css
@@ -15,8 +15,27 @@ h2 {
 header p {
     font-weight: bold;
     font-style: italic;
+    color:gray;
+}
+nav {        
+    background-color: aliceblue;
+    border: 1px green solid;
+    padding: 8px;
+    margin: -1px 0px 0px 0px;
 }
 
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    
+}
+
+nav li {
+    display: inline;
+    padding: 8px;    
+}
+            
 
 p {
     color: firebrick;
