--- a/theme/styles/styles.css
+++ b/theme/styles/styles.css
@@ -133,3 +133,12 @@ section.clear {
     clear:both;
 }
 }
+
+
+.blueBackground {
+    background-color: aqua;
+}
+
+.greenBackground {
+    background-color: green;
+}  
